--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,8 +3,11 @@ chardet==4.0.0
 colorama==0.4.4
 commonmark==0.9.1
 idna==2.10
+loguru==0.5.3
+notify-py==0.3.2
 Pygments==2.9.0
 requests==2.25.1
 rich==10.1.0
 typing-extensions==3.10.0.0
 urllib3==1.26.4
+win32-setctime==1.0.3
